# stephanos

./: .gitignore  AGENTS.md  BILLERBECK_ID_CLEANUP_PLAN.md  CITATION_VERIFICATION_PLAN.md  CLAUDE.md  CRON_SETUP.md  DATABASE_ISSUES.md  DEPLOYMENT_COMPLETE.md  NODEGOAT_DATA_MODEL.md  NODEGOAT_EXPORT_DESIGN.md  NODEGOAT_SETUP.md  NODEGOAT_STATUS.md  README.md  REVIEW_SYSTEM_PLAN.md  TODO.md  WEBSITE_STRUCTURE.md  analyze_pausanias_citations.py  assemble_lemmas.py  backfill_image_blobs.py  backup_review_db.sh  batch_process.py  check_expected_range.py  check_mismatches.py  check_unicode_accents.py  check_wikidata_places.py  count_words.py  db.py  export_etymologies_csv.py  export_for_nodegoat.py  export_for_review.py  export_proper_nouns_csv.py  extract_aliases.py  extract_continuation.py  extract_epub.py  extract_etymologies.py  extract_images_to_postgres.py  extract_images_to_sqlite.py  extract_pdf_pages.py  extract_proper_nouns.py  fix_all_headwords.py  (+47 more)
.claude/: settings.json
.claude/commands/: analyze-translations.md
.claude/skills/translation-analysis/: SKILL.md
migrations/: 20251222_add_review_columns.sql
review_cgi/: HTTPD_CONFIGURATION.md  Makefile  README.md  common.go  go.mod  init_review_db.sh  init_schema.sql  review.go  save.go  setup_reviewers.sh  status.go  stephanos-review.conf  template.go
