[project]
name = "stephanos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "openai>=2.11.0",
    "psycopg2-binary>=2.9.11",
    "pypdfium2>=4.30.0",
    "pillow>=10.3.0",
    "google-genai>=1.55.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "plotly>=6.5.0",
    "kaleido>=1.2.0",
    "weasyprint>=68.0",
]
